typescript/checker/tests/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement8.ts.stderr
error: UndefinedSymbol {
    sym: Atom('X' type=inline),
    span: Span {
        lo: BytePos(
            30,
        ),
        hi: BytePos(
            31,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement8.ts:2:15
  |
2 | for (var v of X) {
  |               ^

